lorem ipsum test

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
 
     <main>
-      <h2>Lorem Ipsum</h2>
+      <h2>Het latijn</h2>
 
       <img class="kolomLinks" src="afbeeldingen/loremipsum.jpg" alt="lorem ipsum">
       <p class="kolomRechts">
