--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="page">
 
     <header>
-      <h1 id="hoofdtitel" class="belangrijk">De beste site van Nederland</h1>
+      <h1 id="hoofdtitel" class="belangrijk">De beste site van Rotterdam</h1>
     </header>
 
     <nav>
@@ -24,7 +24,7 @@
     </nav>
 
     <main>
-      <h2>Het latijn</h2>
+      <h2>Lorem Ipsum</h2>
 
       <img class="kolomLinks" src="afbeeldingen/loremipsum.jpg" alt="lorem ipsum">
       <p class="kolomRechts">
