subtitels aangepast en kleuren

--- a/cayenne.html
+++ b/cayenne.html
@@ -17,16 +17,17 @@
 
     <nav>
       <ul>
-        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="911.html">911</a></li>
         <li><a href="718.html">718</a></li>
-        <li><a href="cayenne.html">cayenne</a></li>
+        <li><a class="active" href="cayenne.html">cayenne</a></li>
          <li><a href="Panamera.html">panamera</a></li>
       </ul>
     </nav>
 
     <main>
-      <h2>Inleiding</h2>
+      <h2>de snelste SUV</h2>
+      <p>hier moet tekst komen</p>
 
       
       <p class="kolomRechts">
