--- a/Panamera.html
+++ b/Panamera.html
@@ -26,7 +26,7 @@
     </nav>
 
     <main>
-      <h2>de </h2>
+      <h5>De perfecte famillie auto </h5>
       <p>hier moet tekst komen</p>
 
       
