--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
     </nav>
 
     <main>
-      <h2>Inleiding</h2>
+      <h1>Inleiding</h1>
       <div class="inleiding">
-        <p class="kolomLinks">
-          welkom bij mijn website over het automerk Porsche, ik ben Jon en ga jullie alles over dit merk vertellen.
+        <div class=kolomLinks>
+          <h3>inleiding</h3>
+         <p> welkom bij mijn website over het automerk Porsche, ik ben Jon en ga jullie alles over dit merk vertellen.
           bijvoorbeeld de statestieken, geschiedenis en feitjes. Ook ga ik specifieke informatie uitleggen over meerdere
           modellen oals de 911 718 cayenne en de panamera.
         </p>
+        </div>
         <img class="kolomRechts" src="afbeeldingen/Porsche_logo.svg.jpg" alt="porschelogo">
       </div>
       <div class="inleiding">
