hoofd pagina opnieuwe gemaakt

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <link rel="stylesheet" href="style.css" />
-  <title>Dit is een eenvoudige website</title>
+  <title>Porsc</title>
   <meta charset="UTF-8" />
 </head>
 
@@ -28,32 +28,34 @@
 
     <main>
       <h1>Inleiding</h1>
-      <div class="inleiding">
-        <div class=kolomLinks>
-          <h3>inleiding</h3>
-         <p> welkom bij mijn website over het automerk Porsche, ik ben Jon en ga jullie alles over dit merk vertellen.
-          bijvoorbeeld de statestieken, geschiedenis en feitjes. Ook ga ik specifieke informatie uitleggen over meerdere
-          modellen oals de 911 718 cayenne en de panamera.
-        </p>
+      <div class="pagePicker">
+        <div class="blokTekst">
+          <p class="tekstGroot">grooot woord</p>
+          <p class="tekstKlein">kleine tekst</p>
         </div>
-        <img class="kolomRechts" src="afbeeldingen/Porsche_logo.svg.jpg" alt="porschelogo">
-      </div>
-      <div class="inleiding">
-        <div class="kolomRechts">
-        <h3> Over mijn passie</h3>
-        <p ">
-          Mijn passie is begonnen bij het kijken van filmpjes online op youtube en dat is uitgelopen tot een passie voor
-          dit merk. Dus besloot ik een site te maken over dit merk en mijn passie met jullie te delen
-          </p>
+        <div class="blokIconen">
+          <div class="icon">
+            <img src="afbeeldingen/Porsche_logo.svg.jpg" alt="porschelogo">
+          </div>
+          <div class="icon">
+            <img src="afbeeldingen/Porsche_logo.svg.jpg" alt="porschelogo">
+          </div>
+          <div class="icon">
+            <img src="afbeeldingen/Porsche_logo.svg.jpg" alt="porschelogo">
+          </div>
+          <div class="icon">
+            <img src="afbeeldingen/Porsche_logo.svg.jpg" alt="porschelogo">
+          </div>
         </div>
-        <img class="kolomLinks" src="afbeeldingen/achtergrond.jpg" class="Modellen">
+
       </div>
+
     </main>
 
     <footer>
       <hr />
-      <p class="smalltext"> Emmauscollege  @2022
-        </p>
+      <p class="smalltext"> Emmauscollege @2022
+      </p>
     </footer>
 
   </div>
