iconen rond gemaakt

--- a/index.html
+++ b/index.html
@@ -34,17 +34,26 @@
           <p class="tekstKlein">kleine tekst</p>
         </div>
         <div class="blokIconen">
-          <div class="icon">
-            <img src="afbeeldingen/Porsche_logo.svg.jpg" alt="porschelogo">
+          <div class="icon1">
+            <p class="tekstIcon1">
+              hallo ik ben icon 1
+            </p>
           </div>
-          <div class="icon">
-            <img src="afbeeldingen/Porsche_logo.svg.jpg" alt="porschelogo">
+          <div class="icon2">
+            <p class="tekstIcon2">
+              hallo ik ben icon 2
+            </p>
           </div>
-          <div class="icon">
-            <img src="afbeeldingen/Porsche_logo.svg.jpg" alt="porschelogo">
+          <div class="icon3">
+            <p class="tekstIcon3">
+              hallo ik ben tekst Icon 3
+            </p>
           </div>
-          <div class="icon">
-            <img src="afbeeldingen/Porsche_logo.svg.jpg" alt="porschelogo">
+          <div class="icon4">
+            <p class="tekstIcon4"
+              hallo ik ben tekst icon 4
+              </p>
+            
           </div>
         </div>
 
