--- a/911.html
+++ b/911.html
@@ -21,35 +21,36 @@
         <li><a class="active" href="911.html">911</a></li>
         <li><a class="718" href="718.html">718</a></li>
         <li><a href="cayenne.html">cayenne</a></li>
-         <li><a href="Panamera.html">panamera</a></li>
+        <li><a href="Panamera.html">panamera</a></li>
       </ul>
     </nav>
 
     <main>
       <h2> de iconische 911</h2>
       <p>hier moet tekst komen.</p>
-  
+
       <h1>Inleiding</h1>
       <div class="inleiding">
         <div class=kolomLinks>
           <h3>inleiding</h3>
-         <p> welkom bij mijn website over het automerk Porsche, ik ben Jon en ga jullie alles over dit merk vertellen.
-          bijvoorbeeld de statestieken, geschiedenis en feitjes. Ook ga ik specifieke informatie uitleggen over meerdere
-          modellen oals de 911 718 cayenne en de panamera.
-        </p>
+          <p> welkom bij mijn website over het automerk Porsche, ik ben Jon en ga jullie alles over dit merk vertellen.
+            bijvoorbeeld de statestieken, geschiedenis en feitjes. Ook ga ik specifieke informatie uitleggen over
+            meerdere
+            modellen oals de 911 718 cayenne en de panamera.
+          </p>
         </div>
         <img class="kolomRechts" src="afbeeldingen/Porsche_logo.svg.jpg" alt="porschelogo">
       </div>
       <div class="inleiding">
         <div class="kolomRechts">
-        <h3> Over mijn passie</h3>
-        <p ">
+          <h3> Over mijn passie</h3>
+          <p ">
           Mijn passie is begonnen bij het kijken van filmpjes online op youtube en dat is uitgelopen tot een passie voor
           dit merk. Dus besloot ik een site te maken over dit merk en mijn passie met jullie te delen
           </p>
         </div>
-        <img class="kolomLinks" src="afbeeldingen/achtergrond.jpg" class="Modellen">
-      </div>
+        <img class=" kolomLinks" src="afbeeldingen/achtergrond.jpg" class="Modellen">
+        </div>
     </main>
 
     <footer>
