oude versie voor andere nav balk

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
 
     <nav>
       <ul>
+      <div class="Navigation">
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="911.html">911</a></li>
         <li><a href="718.html">718</a></li>
         <li><a href="cayenne.html">cayenne</a></li>
         <li><a href="Panamera.html">panamera</a></li>
+      </div>
       </ul>
     </nav>
 
@@ -30,13 +32,13 @@
       <h1>Inleiding</h1>
       <div class="pagePicker">
         <div class="blokTekst">
-          <p class="tekstGroot">grooot woord</p>
-          <p class="tekstKlein">kleine tekst</p>
+          <p class="Titel">Porsche</p>
+          <p class="TekstTitel"> hallo welkom, op deze site kan je informatie vinden over de beroemste modellen van het automerk Porsche. click op de auto foto's hiernaast om naar de subpagina te gaan. </p>
         </div>
         <div class="blokIconen">
           <div class="icon1">
             <p class="tekstIcon1">
-              hallo ik ben icon 1
+              <li><a href="911.html">911</a></li>
             </p>
           </div>
           <div class="icon2">
