navigatie en hoofd pagina aangepast

--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
         <div class="blokIconen">
           <div class="icon1">
             <p class="tekstIcon1">
-              <li><a href="911.html">911</a></li>
+              <li><a href="911.html"> De iconische 911</a></li>
             </p>
           </div>
           <div class="icon2">
             <p class="tekstIcon2">
-              hallo ik ben icon 2
+              <li><a href="718.html"> De compacte 718</a></li>
             </p>
           </div>
           <div class="icon3">
             <p class="tekstIcon3">
-              hallo ik ben tekst Icon 3
+             <li><a href="cayenne.html"> De ruime cayenne</a></li>
             </p>
           </div>
           <div class="icon4">
-            <p class="tekstIcon4"
-              hallo ik ben tekst icon 4
+            <p class="tekstIcon4">
+              <li><a href="Panamera.html"> De snelle panamera</a></li>
               </p>
             
           </div>
