--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
           <p class="TekstTitel"> hallo welkom, op deze site kan je informatie vinden over de beroemste modellen van het automerk Porsche. click op de auto foto's hiernaast om naar de subpagina te gaan. </p>
         </div>
         <div class="blokIconen">
-          <div class="icon1">
+          <div class="icon icon1">
             <p class="tekstIcon1">
               <li><a href="911.html"> De iconische 911</a></li>
             </p>
           </div>
-          <div class="icon2">
+          <div class="icon icon2">
             <p class="tekstIcon2">
               <li><a href="718.html"> De compacte 718</a></li>
             </p>
           </div>
-          <div class="icon3">
+          <div class="icon icon3">
             <p class="tekstIcon3">
              <li><a href="cayenne.html"> De ruime cayenne</a></li>
             </p>
           </div>
-          <div class="icon4">
+          <div class="icon icon4">
             <p class="tekstIcon4">
               <li><a href="Panamera.html"> De snelle panamera</a></li>
               </p>
