begin gemaakt aan 718 pagina

--- a/718.html
+++ b/718.html
@@ -9,34 +9,47 @@
 </head>
 
 <body>
-  <div class="page">
 
-    <header>
-      <h1>Porsche-INFO</h1>
-    </header>
+  <header>
+    <h1>Porsche-INFO</h1>
+  </header>
 
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="911.html">911</a></li>
-        <li><a class="active" href="718.html">718</a></li>
-        <li><a href="cayenne.html">cayenne</a></li>
-        <li><a href="Panamera.html">panamera</a></li>
-      </ul>
-    </nav>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="911.html">911</a></li>
+      <li><a class="active" href="718.html">718</a></li>
+      <li><a href="cayenne.html">cayenne</a></li>
+      <li><a href="Panamera.html">panamera</a></li>
+    </ul>
+  </nav>
 
-    <main>
-      <h3> de compacte 718</h3>
-      <p>hier moet tekst komen</p>
-      <p>hier moet tekst komen</p>
-    </main>
+  <main>
+    <div class="container
+      </div>
+       <div class=" content>
+      <h2>DE PORSCHE 718</h2>
+      <p class="718tekst">Als je bij mij diep in het hart kijkt, dan word ik heel vrolijk van de looks van een Cayman.
+        Die is gewoon af: niet te groot, niet te overdadig en met mooie vloeiende lijnen. Waar ik ook van houd is waar
+        de Cayman voor staat: een auto voor diegenen die echt van sturen houden en het maximale eruit willen halen. Een
+        vast dak geeft meer stijfheid en is lichter, dus dat is de keuze van de purist. Maar ja, dat het dak open kan is
+        ook weer lekker, dus echt bestraft voelden we ons niet dat het een 718T Boxster was. </p>
 
-    <footer>
-      <hr />
-      <p class="smalltext">--Emmauscollege-- --@2022--</p>
-    </footer>
 
-  </div>
+
+
+
+    </div>
+
+
+  </main>
+
+  <footer>
+    <hr />
+    <p class="smalltext">--Emmauscollege-- --@2022--</p>
+  </footer>
+
+
 </body>
 
 </html>
