--- a/Panamera.html
+++ b/Panamera.html
@@ -12,7 +12,7 @@
   <div class="page">
 
     <header>
-      <h1 id="hoofdtitel" class="belangrijk">Porsche-INFO</h1>
+      <h1> id="hoofdtitel" class="belangrijk">Porsche-INFO</h1>
     </header>
 
     <nav>
@@ -26,7 +26,7 @@
     </nav>
 
     <main>
-      <h5>De perfecte famillie auto </h5>
+      <h1>De perfecte famillie auto </h1>
       <p>hier moet tekst komen</p>
 
       
