718 pagina basis af

--- a/718.html
+++ b/718.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <div class="page">
 
   <header>
     <h1>Porsche-INFO</h1>
@@ -25,21 +26,26 @@
   </nav>
 
   <main>
-    <div class="container
-      </div>
-       <div class=" content>
-      <h2>DE PORSCHE 718</h2>
-      <p class="718tekst">Als je bij mij diep in het hart kijkt, dan word ik heel vrolijk van de looks van een Cayman.
-        Die is gewoon af: niet te groot, niet te overdadig en met mooie vloeiende lijnen. Waar ik ook van houd is waar
-        de Cayman voor staat: een auto voor diegenen die echt van sturen houden en het maximale eruit willen halen. Een
-        vast dak geeft meer stijfheid en is lichter, dus dat is de keuze van de purist. Maar ja, dat het dak open kan is
-        ook weer lekker, dus echt bestraft voelden we ons niet dat het een 718T Boxster was. </p>
-
-
-
-
-
+    <div class="intro">
+      <h2 class="titel718"> De viercilinder porsche 718</h2>
+      <p class="introtekst"> Op de openbare weg rijd ik kort met de Porsche 718 Boxster GTS 4.0. Een prettige ervaring, Porsche heeft een korte maar mooie route gepland. Veel snelle bochten die in de derde versnelling heerlijk te ronden zijn. Mooi asfalt, fijn rijden. Maar de redline van 7800 toeren bereik ik niet vaak. De balans in de auto is heerlijk. Er is genoeg koppel om ook iets luier te rijden. Het is eigenlijk een rustgevende ervaring. Vreemd, want in de Porsche 718 Spyder die ik vorig jaar reed, schreeuwde de auto constant om meer, harder, sneller.</p>
     </div>
+  <div class="allinea1">
+    <p class="tekstpagina"> Maar dat ‘meer, harder, sneller’ is nu meer ‘prima zo, vlot, af en toe doorhalen’ en niet meer dan dat. Grappig hoe twee auto’s die in de basis zo gelijk lijken, zo verschillend voelen. Niet dat het mis gaat als ik wel even de grens op zoek. De Porsche 718 Boxster GTS laat zich graag stevig aanpakken. Is op de grens echt heel goed, geeft veel vertrouwen. Geen onderstuur te vinden. De sleutel zit hem denk ik in het geluid: de auto lijkt stiller.</p>
+  </div>
+    <div class="fotorechts1">
+  <img src="https://alle-autos.nl/uploads/2019/09/Porsche-718_Cayman_1%20pag%20294.jpg" alt="fotorechts1"
+    width="760" 
+     height="510">
+    </div>
+    <div class="allinea2">
+      <h2 class="titel718"> Het technische deel </h2>
+      <p class="tekstpagina"> Op technisch vlak zijn de Style Editions dus de “normale” Cayman- en Boxster-basisuitvoeringen die aangedreven worden door de twee liter grote viercilinder boxermotor met 300 pk en 380 Nm in combinatie met een handgeschakelde zesbak en optioneel met de PDK-automaat.</p>
+        
+      
+    }
+
+
 
 
   </main>
@@ -49,7 +55,7 @@
     <p class="smalltext">--Emmauscollege-- --@2022--</p>
   </footer>
 
-
+  </div>
 </body>
 
 </html>
