--- a/718.html
+++ b/718.html
@@ -35,15 +35,30 @@
   </div>
     <div class="fotorechts1">
   <img src="https://alle-autos.nl/uploads/2019/09/Porsche-718_Cayman_1%20pag%20294.jpg" alt="fotorechts1"
-    width="760" 
+    width="750" 
      height="510">
     </div>
     <div class="allinea2">
       <h2 class="titel718"> Het technische deel </h2>
-      <p class="tekstpagina"> Op technisch vlak zijn de Style Editions dus de “normale” Cayman- en Boxster-basisuitvoeringen die aangedreven worden door de twee liter grote viercilinder boxermotor met 300 pk en 380 Nm in combinatie met een handgeschakelde zesbak en optioneel met de PDK-automaat.</p>
-        
+      <p class="tekstpagina"> De Porsche 718 Cayman komt op de markt in 2016 met typecode 982. In feite is het een gefacelifte variant van de Porsche Cayman 981 maar omdat de zescilindermotoren van de Porsche Cayman en de Porsche Cayman S worden vervangen door viercilinder turbomotoren wordt '718' aan de typenaam toegevoegd. Dat is tevens de naam van de Porsche die in 1959 en 1960 de Targa Florio won. Door een kleine motor in een zeer lichte auto te plaatsen kon die Porsche 718 de concurrentie met zwaardere motoren aftroeven.</p>
+    </div>
+    <div class="allinea3">
+      <P class="tekstpagina"> De Porsche 718 Boxster is eigenlijk een faceliftversie van de Posche Boxster 981, de derde generatie van dit type. De 718 Boxster heeft echter vier- in plaats van zescilindermotoren en draagt de modelcode 982. De aanduiding 718 is geleend van de raceauto die in 1959 en 1960 de Targa Florio won. De zescilindermotoren uit de Boxster en de Boxster S zijn vervangen door viercilinders met een turbo. De motor van de standaard Porsche Boxster heeft een inhoud van 2,0-liter en een vermogen van 300 pk. De Boxster S heeft een viercilinder turbo van 2,5 liter die 350 pk levert. Porsche claimt dat de viercilinders 0,9 tot 1,0 liter minder brandstof nodig hebben per honderd kilometer. Ten opzichte van de Porsche Boxster 981 is de nieuwe LED-koplampen de grootste uiterlijke wijziging.
+.</P> 
+    </div>
+    <div class="allinea4">
+       <h2 class="titel718"> De geschiedenis van de 718 </h2>
+      <p class="tekstpagina"> De Porsche 718 Cayman komt op de markt in 2016 met typecode 982. In feite is het een gefacelifte variant van de Porsche Cayman 981 maar omdat de zescilindermotoren van de Porsche Cayman en de Porsche Cayman S worden vervangen door viercilinder turbomotoren wordt '718' aan de typenaam toegevoegd. Dat is tevens de naam van de Porsche die in 1959 en 1960 de Targa Florio won. Door een kleine motor in een zeer lichte auto te plaatsen kon die Porsche 718 de concurrentie met zwaardere motoren aftroeven.</p>
+      <p class="tekstpagina">De Porsche 718 Cayman komt op de markt in 2016 met typecode 982. In feite is het een gefacelifte variant van de Porsche Cayman 981 maar omdat de zescilindermotoren van de Porsche Cayman en de <b>Porsche Cayman S</b> worden vervangen door viercilinder turbomotoren wordt '718' aan de typenaam toegevoegd. Dat is tevens de naam van de Porsche die in 1959 en 1960 de Targa Florio won. Door een kleine motor in een zeer lichte auto te plaatsen kon die Porsche 718 de concurrentie met zwaardere motoren aftroeven </p>
+    </div>
+     <div class="fotolinks1">
+  <img src="https://autofans.be/sites/default/files/styles/artikel_body/public/media/merken/porsche/anderefotos/porsche_718_rs61_spyder_1.jpg" alt="fotorechts1"
+    width="750" 
+     height="510">
+    </div>
+    <div class="allinea5">
+      <p class="tekstpagina">De Porsche 718 Cayman komt op de markt in 2016 met typecode 982. In feite is het een gefacelifte variant van de Porsche Cayman 981 maar omdat de zescilindermotoren van de Porsche Cayman en de Porsche Cayman S worden vervangen door viercilinder turbomotoren wordt '718' aan de typenaam toegevoegd. Dat is tevens de naam van de Porsche die in 1959 en 1960 de Targa Florio won. Door een kleine motor in een zeer lichte auto te plaatsen kon die Porsche 718 de concurrentie met zwaardere motoren aftroeven. </p>
       
-    }
 
 
 
