--- a/Panamera.html
+++ b/Panamera.html
@@ -12,7 +12,7 @@
   <div class="page">
 
     <header>
-      <h1> id="hoofdtitel" class="belangrijk">Porsche-INFO</h1>
+      <h1 id="hoofdtitel" class="belangrijk">Porsche-INFO</h1>
     </header>
 
     <nav>
