--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 
 <body>
   <div class="page">
-    
+
     <header>
       <h1 id="hoofdtitel" class="belangrijk">Porsche-INFO
       </h1>
-  
+
     </header>
 
     <nav>
       <ul>
-      <div class="Navigation">
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="911.html">911</a></li>
-        <li><a href="718.html">718</a></li>
-        <li><a href="cayenne.html">cayenne</a></li>
-        <li><a href="Panamera.html">panamera</a></li>
-      </div>
+        <div class="Navigation">
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="911.html">911</a></li>
+          <li><a href="718.html">718</a></li>
+          <li><a href="cayenne.html">cayenne</a></li>
+          <li><a href="Panamera.html">panamera</a></li>
+        </div>
       </ul>
     </nav>
 
@@ -34,29 +34,33 @@
       <div class="pagePicker">
         <div class="blokTekst">
           <p class="Titel">Porsche</p>
-          <p class="TekstTitel"> hallo welkom, op deze site kan je informatie vinden over de beroemste modellen van het automerk Porsche. click op de auto foto's hiernaast om naar de subpagina te gaan. </p>
+          <ul class="TekstTitel">
+            <li>Hallo welkom, op deze site kan je informatie vinden over de beroemste modellen van het automerk Porsche.
+              click op de auto foto's hiernaast om naar de subpagina te gaan</li>.
+          </ul>
         </div>
+        <!-- de layout van blok 2 en 4 zijn niet helemaal goed, de fout kon ik helaas niet vinden, ook niet met uw hulp -->
         <div class="blokIconen">
           <div class="icon icon1">
             <p class="tekstIcon1">
-              <li><a href="911.html"> De iconische 911</a></li>
+              <a href="911.html"> De iconische 911</a>
             </p>
           </div>
           <div class="icon icon2">
             <p class="tekstIcon2">
-              <li><a href="718.html"> De compacte 718</a></li>
+              <a href="718.html"> De compacte 718</a>
             </p>
           </div>
           <div class="icon icon3">
             <p class="tekstIcon3">
-             <li><a href="cayenne.html"> De ruime cayenne</a></li>
+              <a href="cayenne.html"> De ruime cayenne</a>
             </p>
           </div>
           <div class="icon icon4">
             <p class="tekstIcon4">
-              <li><a href="Panamera.html"> De snelle panamera</a></li>
-              </p>
-            
+              <a href="Panamera.html"> De snelle panamera</a>
+            </p>
+
           </div>
         </div>
 
