home 911 718 pagina helemaal af

--- a/911.html
+++ b/911.html
@@ -12,7 +12,7 @@
   <div class="page">
 
     <header>
-      <h1>Porsche-INFO</h1>
+      <h3 class="bovenTitel"> Porsche INFO</h3>
     </header>
 
     <nav>
@@ -26,37 +26,74 @@
     </nav>
 
     <main>
-      <h1> de iconische 911</h1>
-      <p>hier moet tekst komen.</p>
-
-      <h1>Inleiding</h1>
-      <div class="inleiding">
-        <div class=kolomLinks>
-          <h1>inleiding</h1>
-          <p> welkom bij mijn website over het automerk Porsche, ik ben Jon en ga jullie alles over dit merk vertellen.
-            bijvoorbeeld de statestieken, geschiedenis en feitjes. Ook ga ik specifieke informatie uitleggen over
-            meerdere
-            modellen oals de 911 718 cayenne en de panamera.
+      <h2 class="titelelkepagina"> de iconische 911</h1>
+        <div class="intro">
+          <p class="introtekst"> Welkom op de pagina van de porsche 911, De 911 is het topmodel van porsche en word al
+            jaren lang als best verkocht over heel de wereld. Deze auto is het eerste model dat <b>Ferdinand Alexander
+              porche</b> heeft ontworpen, de 911 word ook wel de Butzi-wagen genoemd door hem. Hierdoor is deze
+            prachtige bolide een echte icoon voor Porsche </p>
+        </div>
+        <div class="allinea1">
+          <p class="tekstpagina"> De 911 heeft meerdere versies van zich zelf namelijk, <b>de 911 carrera</b> dit is
+            een coupe eigenlijk de meest voorkomende versie van de 911. deze word aangedreven door de <b>inlijn 6
+              cilinder</b> die 385PK produceert. je kan ook voor de carrera S en 4S kiezen deze hebben 450PK en gaan tot
+            7,500 toeren. ook heb je nog een Targa serie die met de GTS bijna 500PK aantikt. en natuurlijk de alles
+            overtreffende <b>>turbo en turbo S</b> met de meest sportieve uitvoering mogelijk, waarbij de turbo S 680PK
+            heeft </p>
+        </div>
+        <div class="fotorechts1">
+          <img
+            src="https://cdn.carbuzz.com/gallery-images/2022-porsche-911-turbo-frontal-aspect-carbuzz-702934-1600.jpg"
+            width="660" height="510">
+        </div>
+        <div class="allinea2">
+          <h2 class="titelelkepagina"> zo klein maar zo snel </h2>
+          <p class="tekstpagina">Je zult vast denken hoe komt porsche aan al dat vermogen in zo'n klein motorblok.
+            Porsche heeft een hele speciale 6-cilinder die niet te vergelijk is met bijvoorbeeld een Nissan GTR. dit
+            blok heeft onder andere grotere uitlaatgasturbo's en voor het eerst piëzo-injectoren in een 6-cilinder blok.
+            De uitlaatspruitstukken, die gebaseerd zijn op die van de 911 GT2 RS, verbeteren door geoptimaliseerde
+            stromingsverhoudingen de respons en de efficiëntie. en samen met een Aerodymisch systeem op het frame van de
+            auto zorgt dit ervoor dat de koudelucht met een noodvaart door het blok heen gaat en er weer uitkomt. ook
+            heeft de spoiler een inlaat systeem waar de lucht doorheen komt. dit zorgt voor een grotere hoeveelheid
+            downforce voor de auto. waardoor de auto gemakkelijk door bochten komt.
           </p>
         </div>
-        <img class="kolomRechts" src="afbeeldingen/Porsche_logo.svg.jpg" alt="porschelogo">
-      </div>
-      <div class="inleiding">
-        <div class="kolomRechts">
-          <h3> Over mijn passie</h3>
-          <p ">
-          Mijn passie is begonnen bij het kijken van filmpjes online op youtube en dat is uitgelopen tot een passie voor
-          dit merk. Dus besloot ik een site te maken over dit merk en mijn passie met jullie te delen
-          </p>
+        <div class="allinea3">
+          <P class="tekstpagina"> Maar natuurlijk heeft porsche ook gedacht aan een versnellingsbak die met zon snelheid
+            schakkelt dat je het niet eens voelt. De zogenaamde volledig nieuw ontwikkelde <b>8-traps Porsche
+              Doppelkupplung (PDK)</b>.kan zonder onderbreking van de trekkracht extreem snel worden geschakeld, dus
+            echt binnen milliseconden. In vergelijking met de voorgaande generatie biedt de 8-traps PDK een voelbaar
+            betere spreiding tussen comfort, performance en efficiëntie. onder de turbo S ligt ook nog is het zogeheten
+            PASM sportonderstel die de auto met 10mm verlaagt met speciale veren waardoor de auto iets schuin komt de
+            liggen in de bochten. het resulaat is bizar als je het aan mij vraagt. De turbo s trekt naar de 100 in 2,7
+            seconde en zit op 200KM/U in 8,9 seconde maar liefts
         </div>
-        <img class=" kolomLinks" src="afbeeldingen/achtergrond.jpg" class="Modellen">
+        <div class="allinea4">
+          <h2 class="titelelkepagina"> De Porsche RennSport</h2>
+          <p class="tekstpagina"> Porsche heeft natuurlijk ook een circuit Versie van de 911 gemaakt in de afgelopen
+            jaren. De zogeheten RenneSport serie. De GT3 is er een van. Deze auto heeft een duidelijk race achtige uitvoering waarbij de spoiler nog
+            groter is dan bij de normale turbo s. ook zijn de velgen van magnesium en zitten er grotere keramische
+            velgen op. De GT3 heeft ook een nog snellere verie en dat is de 911 GTR RS, deze bolide <b>(op de foto te
+              zien)</b> voelt zich helemaal thuis op het circuit en op de Autobahn. met zelfs functies die op F1 auto
+            zitten zoals (DRS) en CFK materialen word deze auto beschouwd als een echte racer. met 9.000 NM toeren raast
+            deze door de bochten en met een enorme downforce gaat dit moeiteloos. </p>
         </div>
-    </main>
+        <div class="fotolinks1">
+          <img src="https://media.autoweek.nl/m/ctkylmpbg0cc.jpg"
+            alt="fotorechts1" width="750" height="510">
+        </div>
+        <div class="allinea5">
+          <p class="tekstpagina">De consequente toepassing van koolstofvezelversterkte kunststof (CfK) maakt een leeggewicht van slechts 1450 kg mogelijk. Onder andere de spatschermen, de voorklep in RS-vorm en het dak zijn gemaakt van dit in de autosport beproefde materiaal. Gewichtige voordelen op het circuit bieden ook de CfK-achterspoiler met actieve aerodynamica, de CfK-portieren voor de beste  ontluchting van de wielkasten en de lichtgewicht gesmede aluminium en magnesium wielen zorgen hiervoor. </p>
+        </div>
+        <div class="allinea6">
+          <p class="tekstpagina"> <b class="feitje">FEITJE:</b> Het Porsche Rennesport racing team heeft 4 jaar geleden een bizar record neergezet op de Nürburgring Nordschleife(duits circuit). Dit record heeft de 919 EVO met als coureur Timo Bernhard neergezet. met als behaalde tijd van maar liefst 5:24.375 seconde. Hij shoot met meer dan 360 kilometer per uur over de baan heen. </p>
+        </div>
 
-    <footer>
-      <hr />
-      <p class="smalltext">--Emmauscollege-- --@2022--</p>
-    </footer>
+
+        <footer>
+          <hr />
+          <p class="smalltext">--Emmauscollege-- --@2022--</p>
+        </footer>
 
   </div>
 </body>
