--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 
 <html lang="nl">
-
 <head>
   <link rel="stylesheet" href="style.css" />
-  <title>Porsc</title>
+  <title>Porsche</title>
   <meta charset="UTF-8" />
 </head>
 
@@ -12,9 +11,7 @@
   <div class="page">
 
     <header>
-      <h1 id="hoofdtitel" class="belangrijk">Porsche-INFO
-      </h1>
-
+      <h3 class="bovenTitel"> Porsche INFO</h3>
     </header>
 
     <nav>
@@ -30,13 +27,13 @@
     </nav>
 
     <main>
-      <h1>Inleiding</h1>
+      <h2 class="titelelkepagina">Inleiding</h2>
       <div class="pagePicker">
         <div class="blokTekst">
-          <p class="Titel">Porsche</p>
+          <p class="OnderTitel">Porsche</p>
           <ul class="TekstTitel">
-            <li>Hallo welkom, op deze site kan je informatie vinden over de beroemste modellen van het automerk Porsche.
-              click op de auto foto's hiernaast om naar de subpagina te gaan</li>.
+            <li>Hallo welkom, op deze site kan je informatie vinden over de beroemste modellen van het automerk Porsche. Ik ben Jon en ga jullie alles over dit merk vertellen. Bijvoorbeeld de statestieken, geschiedenis en feitjes.
+              click op de auto foto's hiernaast om naar de subpagina te gaan</li>
           </ul>
         </div>
         <!-- de layout van blok 2 en 4 zijn niet helemaal goed, de fout kon ik helaas niet vinden, ook niet met uw hulp -->
@@ -60,12 +57,9 @@
             <p class="tekstIcon4">
               <a href="Panamera.html"> De snelle panamera</a>
             </p>
-
           </div>
         </div>
-
       </div>
-
     </main>
 
     <footer>
@@ -76,5 +70,4 @@
 
   </div>
 </body>
-
 </html>
