--- a/Panamera.html
+++ b/Panamera.html
@@ -12,7 +12,8 @@
   <div class="page">
 
     <header>
-      <h1 id="hoofdtitel" class="belangrijk">Porsche-INFO</h1>
+      <h3 class="bovenTitel"> Porsche INFO</h3>
+
     </header>
 
     <nav>
@@ -26,39 +27,78 @@
     </nav>
 
     <main>
-    <div class="intro">
-      <h2 class="titel718"> De viercilinder porsche 718</h2>
-      <p class="introtekst"> Op de openbare weg rijd ik kort met de Porsche 718 Boxster GTS 4.0. Een prettige ervaring, Porsche heeft een korte maar mooie route gepland. Veel snelle bochten die in de derde versnelling heerlijk te ronden zijn. Mooi asfalt, fijn rijden. Maar de redline van 7800 toeren bereik ik niet vaak. De balans in de auto is heerlijk. Er is genoeg koppel om ook iets luier te rijden. Het is eigenlijk een rustgevende ervaring. Vreemd, want in de Porsche 718 Spyder die ik vorig jaar reed, schreeuwde de auto constant om meer, harder, sneller.</p>
-    </div>
-  <div class="allinea1">
-    <p class="tekstpagina"> Maar dat ‘meer, harder, sneller’ is nu meer ‘prima zo, vlot, af en toe doorhalen’ en niet meer dan dat. Grappig hoe twee auto’s die in de basis zo gelijk lijken, zo verschillend voelen. Niet dat het mis gaat als ik wel even de grens op zoek. De Porsche 718 Boxster GTS laat zich graag stevig aanpakken. Is op de grens echt heel goed, geeft veel vertrouwen. Geen onderstuur te vinden. De sleutel zit hem denk ik in het geluid: de auto lijkt stiller.</p>
-  </div>
-    <div class="fotorechts1">
-  <img src="https://alle-autos.nl/uploads/2019/09/Porsche-718_Cayman_1%20pag%20294.jpg" alt="fotorechts1"
-    width="750" 
-     height="510">
-    </div>
-    <div class="allinea2">
-      <h2 class="titel718"> Het technische deel </h2>
-      <p class="tekstpagina"> De Porsche 718 Cayman komt op de markt in 2016 met typecode 982. In feite is het een gefacelifte variant van de Porsche Cayman 981 maar omdat de zescilindermotoren van de Porsche Cayman en de Porsche Cayman S worden vervangen door viercilinder turbomotoren wordt '718' aan de typenaam toegevoegd. Dat is tevens de naam van de Porsche die in 1959 en 1960 de Targa Florio won. Door een kleine motor in een zeer lichte auto te plaatsen kon die Porsche 718 de concurrentie met zwaardere motoren aftroeven.</p>
-    </div>
-    <div class="allinea3">
-      <P class="tekstpagina"> De Porsche 718 Boxster is eigenlijk een faceliftversie van de Posche Boxster 981, de derde generatie van dit type. De 718 Boxster heeft echter vier- in plaats van zescilindermotoren en draagt de modelcode 982. De aanduiding 718 is geleend van de raceauto die in 1959 en 1960 de Targa Florio won. De zescilindermotoren uit de Boxster en de Boxster S zijn vervangen door viercilinders met een turbo. De motor van de standaard Porsche Boxster heeft een inhoud van 2,0-liter en een vermogen van 300 pk. De Boxster S heeft een viercilinder turbo van 2,5 liter die 350 pk levert. Porsche claimt dat de viercilinders 0,9 tot 1,0 liter minder brandstof nodig hebben per honderd kilometer. Ten opzichte van de Porsche Boxster 981 is de nieuwe LED-koplampen de grootste uiterlijke wijziging.
-.</P> 
-    </div>
-    <div class="allinea4">
-       <h2 class="titel718"> De geschiedenis van de 718 </h2>
-      <p class="tekstpagina"> De Porsche 718 Cayman komt op de markt in 2016 met typecode 982. In feite is het een gefacelifte variant van de Porsche Cayman 981 maar omdat de zescilindermotoren van de Porsche Cayman en de Porsche Cayman S worden vervangen door viercilinder turbomotoren wordt '718' aan de typenaam toegevoegd. Dat is tevens de naam van de Porsche die in 1959 en 1960 de Targa Florio won. Door een kleine motor in een zeer lichte auto te plaatsen kon die Porsche 718 de concurrentie met zwaardere motoren aftroeven.</p>
-      <p class="tekstpagina">De Porsche 718 Cayman komt op de markt in 2016 met typecode 982. In feite is het een gefacelifte variant van de Porsche Cayman 981 maar omdat de zescilindermotoren van de Porsche Cayman en de <b>Porsche Cayman S</b> worden vervangen door viercilinder turbomotoren wordt '718' aan de typenaam toegevoegd. Dat is tevens de naam van de Porsche die in 1959 en 1960 de Targa Florio won. Door een kleine motor in een zeer lichte auto te plaatsen kon die Porsche 718 de concurrentie met zwaardere motoren aftroeven </p>
-    </div>
-     <div class="fotolinks1">
-  <img src="https://autofans.be/sites/default/files/styles/artikel_body/public/media/merken/porsche/anderefotos/porsche_718_rs61_spyder_1.jpg" alt="fotorechts1"
-    width="750" 
-     height="510">
-    </div>
-    <div class="allinea5">
-      <p class="tekstpagina">De Porsche 718 Cayman komt op de markt in 2016 met typecode 982. In feite is het een gefacelifte variant van de Porsche Cayman 981 maar omdat de zescilindermotoren van de Porsche Cayman en de Porsche Cayman S worden vervangen door viercilinder turbomotoren wordt '718' aan de typenaam toegevoegd. Dat is tevens de naam van de Porsche die in 1959 en 1960 de Targa Florio won. Door een kleine motor in een zeer lichte auto te plaatsen kon die Porsche 718 de concurrentie met zwaardere motoren aftroeven. </p>
-      
+       <h2 class="titelelkepagina"> De snelle panamera</h1>
+      <div class="intro">
+        <p class="introtekst"> Op de openbare weg rijd ik kort met de Porsche 718 Boxster GTS 4.0. Een prettige
+          ervaring, Porsche heeft een korte maar mooie route gepland. Veel snelle bochten die in de derde versnelling
+          heerlijk te ronden zijn. Mooi asfalt, fijn rijden. Maar de redline van 7800 toeren bereik ik niet vaak. De
+          balans in de auto is heerlijk. Er is genoeg koppel om ook iets luier te rijden. Het is eigenlijk een
+          rustgevende ervaring. Vreemd, want in de Porsche 718 Spyder die ik vorig jaar reed, schreeuwde de auto
+          constant om meer, harder, sneller.</p>
+      </div>
+      <div class="allinea1">
+        <p class="tekstpagina"> Maar dat ‘meer, harder, sneller’ is nu meer ‘prima zo, vlot, af en toe doorhalen’ en
+          niet meer dan dat. Grappig hoe twee auto’s die in de basis zo gelijk lijken, zo verschillend voelen. Niet dat
+          het mis gaat als ik wel even de grens op zoek. De Porsche 718 Boxster GTS laat zich graag stevig aanpakken. Is
+          op de grens echt heel goed, geeft veel vertrouwen. Geen onderstuur te vinden. De sleutel zit hem denk ik in
+          het geluid: de auto lijkt stiller.</p>
+      </div>
+      <div class="fotorechts1">
+        <img src="https://wallpaperaccess.com/full/6990592.jpg" alt="fotorechts1"
+          width="750" height="510">
+      </div>
+      <div class="allinea2">
+        <h2 class="titelelkepagina"> Het technische deel </h2>
+        <p class="tekstpagina"> De Porsche 718 Cayman komt op de markt in 2016 met typecode 982. In feite is het een
+          gefacelifte variant van de Porsche Cayman 981 maar omdat de zescilindermotoren van de Porsche Cayman en de
+          Porsche Cayman S worden vervangen door viercilinder turbomotoren wordt '718' aan de typenaam toegevoegd. Dat
+          is tevens de naam van de Porsche die in 1959 en 1960 de Targa Florio won. Door een kleine motor in een zeer
+          lichte auto te plaatsen kon die Porsche 718 de concurrentie met zwaardere motoren aftroeven.</p>
+      </div>
+      <div class="allinea3">
+        <P class="tekstpagina"> De Porsche 718 Boxster is eigenlijk een faceliftversie van de Posche Boxster 981, de
+          derde generatie van dit type. De 718 Boxster heeft echter vier- in plaats van zescilindermotoren en draagt de
+          modelcode 982. De aanduiding 718 is geleend van de raceauto die in 1959 en 1960 de Targa Florio won. De
+          zescilindermotoren uit de Boxster en de Boxster S zijn vervangen door viercilinders met een turbo. De motor
+          van de standaard Porsche Boxster heeft een inhoud van 2,0-liter en een vermogen van 300 pk. De Boxster S heeft
+          een viercilinder turbo van 2,5 liter die 350 pk levert. Porsche claimt dat de viercilinders 0,9 tot 1,0 liter
+          minder brandstof nodig hebben per honderd kilometer. Ten opzichte van de Porsche Boxster 981 is de nieuwe
+          LED-koplampen de grootste uiterlijke wijziging.
+          .</P>
+      </div>
+      <div class="allinea4">
+        <h2 class="titelelkepagina"> De geschiedenis van de 718 </h2>
+        <p class="tekstpagina"> De Porsche 718 Cayman komt op de markt in 2016 met typecode 982. In feite is het een
+          gefacelifte variant van de Porsche Cayman 981 maar omdat de zescilindermotoren van de Porsche Cayman en de
+          Porsche Cayman S worden vervangen door viercilinder turbomotoren wordt '718' aan de typenaam toegevoegd. Dat
+          is tevens de naam van de Porsche die in 1959 en 1960 de Targa Florio won. Door een kleine motor in een zeer
+          lichte auto te plaatsen kon die Porsche 718 de concurrentie met zwaardere motoren aftroeven.</p>
+        <p class="tekstpagina">De Porsche 718 Cayman komt op de markt in 2016 met typecode 982. In feite is het een
+          gefacelifte variant van de Porsche Cayman 981 maar omdat de zescilindermotoren van de Porsche Cayman en de
+          <b>Porsche Cayman S</b> worden vervangen door viercilinder turbomotoren wordt '718' aan de typenaam
+          toegevoegd. Dat is tevens de naam van de Porsche die in 1959 en 1960 de Targa Florio won. Door een kleine
+          motor in een zeer lichte auto te plaatsen kon die Porsche 718 de concurrentie met zwaardere motoren aftroeven
+        </p>
+      </div>
+      <div class="fotolinks1">
+        <img
+          src="https://autofans.be/sites/default/files/styles/artikel_body/public/media/merken/porsche/anderefotos/porsche_718_rs61_spyder_1.jpg"
+          alt="fotorechts1" width="750" height="510">
+      </div>
+      <div class="allinea5">
+        <p class="tekstpagina">De Porsche 718 Cayman komt op de markt in 2016 met typecode 982. In feite is het een
+          gefacelifte variant van de Porsche Cayman 981 maar omdat de zescilindermotoren van de Porsche Cayman en de
+          Porsche Cayman S worden vervangen door viercilinder turbomotoren wordt '718' aan de typenaam toegevoegd. Dat
+          is tevens de naam van de Porsche die in 1959 en 1960 de Targa Florio won. Door een kleine motor in een zeer
+          lichte auto te plaatsen kon die Porsche 718 de concurrentie met zwaardere motoren aftroeven. </p>
+      </div>
+      <div class="allinea6">
+        <p class="tekstpagina"> De Porsche 718 Cayman komt op de markt in 2016 met typecode 982. In feite is het een
+          gefacelifte variant van de Porsche Cayman 981 maar omdat de zescilindermotoren van de Porsche Cayman en de
+          Porsche Cayman S worden vervangen door viercilinder turbomotoren wordt '718' aan de typenaam toegevoegd. Dat
+          is tevens de naam van de Porsche die in 1959 en 1960 de Targa Florio won. Door een kleine motor in een zeer
+          lichte auto te plaatsen kon die Porsche 718 de concurrentie met zwaardere motoren aftroeven. </p>
+      </div>
 
     </main>
 
