--- a/Panamera.html
+++ b/Panamera.html
@@ -29,12 +29,7 @@
     <main>
        <h2 class="titelelkepagina"> De snelle panamera</h1>
       <div class="intro">
-        <p class="introtekst"> Op de openbare weg rijd ik kort met de Porsche 718 Boxster GTS 4.0. Een prettige
-          ervaring, Porsche heeft een korte maar mooie route gepland. Veel snelle bochten die in de derde versnelling
-          heerlijk te ronden zijn. Mooi asfalt, fijn rijden. Maar de redline van 7800 toeren bereik ik niet vaak. De
-          balans in de auto is heerlijk. Er is genoeg koppel om ook iets luier te rijden. Het is eigenlijk een
-          rustgevende ervaring. Vreemd, want in de Porsche 718 Spyder die ik vorig jaar reed, schreeuwde de auto
-          constant om meer, harder, sneller.</p>
+        <p class="introtekst">welkom op de pagina van de porsche cayenne, op deze pagina  </p>
       </div>
       <div class="allinea1">
         <p class="tekstpagina"> Maar dat ‘meer, harder, sneller’ is nu meer ‘prima zo, vlot, af en toe doorhalen’ en
@@ -49,22 +44,8 @@
       </div>
       <div class="allinea2">
         <h2 class="titelelkepagina"> Het technische deel </h2>
-        <p class="tekstpagina"> De Porsche 718 Cayman komt op de markt in 2016 met typecode 982. In feite is het een
-          gefacelifte variant van de Porsche Cayman 981 maar omdat de zescilindermotoren van de Porsche Cayman en de
-          Porsche Cayman S worden vervangen door viercilinder turbomotoren wordt '718' aan de typenaam toegevoegd. Dat
-          is tevens de naam van de Porsche die in 1959 en 1960 de Targa Florio won. Door een kleine motor in een zeer
-          lichte auto te plaatsen kon die Porsche 718 de concurrentie met zwaardere motoren aftroeven.</p>
-      </div>
-      <div class="allinea3">
-        <P class="tekstpagina"> De Porsche 718 Boxster is eigenlijk een faceliftversie van de Posche Boxster 981, de
-          derde generatie van dit type. De 718 Boxster heeft echter vier- in plaats van zescilindermotoren en draagt de
-          modelcode 982. De aanduiding 718 is geleend van de raceauto die in 1959 en 1960 de Targa Florio won. De
-          zescilindermotoren uit de Boxster en de Boxster S zijn vervangen door viercilinders met een turbo. De motor
-          van de standaard Porsche Boxster heeft een inhoud van 2,0-liter en een vermogen van 300 pk. De Boxster S heeft
-          een viercilinder turbo van 2,5 liter die 350 pk levert. Porsche claimt dat de viercilinders 0,9 tot 1,0 liter
-          minder brandstof nodig hebben per honderd kilometer. Ten opzichte van de Porsche Boxster 981 is de nieuwe
-          LED-koplampen de grootste uiterlijke wijziging.
-          .</P>
+        <p class="tekstpagina"> Maar zet de drive mode op Sport en de V8 brul verraadt dat de Panamera in een sportauto veranderd! Mr Hyde is here! Dit is geen standaardauto met een plus pakket, maar gebouwd als sportauto! Gasrespons is direct, het onderstel op sport, luchtvering straffer en hij kleeft aan de weg, vliegt ervandoor en blijft maar gaan. De limiet van deze Porsche ligt veel verder dan mijn rijcapaciteiten. Waar ik vroeger met 80 door een klaverblad ging, haal ik dat nu met 130. Bocht uit kun je volgas, want de vierwielaandrijving en vooral de keramische remmen geven je alle vertrouwen. Ook op hoge snelheid ligt hij strak op de weg. Met 4 mensen en volledige bagage makkelijk 310 km/h in Duitsland gehaald.
+
       </div>
       <div class="allinea4">
         <h2 class="titelelkepagina"> De geschiedenis van de 718 </h2>
