--- a/cayenne.html
+++ b/cayenne.html
@@ -28,14 +28,11 @@
     <main>
        <h2 class="titelelkepagina"> De ruime cayenne</h1>
       <div class="intro">
-        <p class="introtekst"> De Porsche cayenne </p>
+        <p class="introtekst"> welkom op de pagina van de porsche cayennen </p>
       </div>
       <div class="allinea1">
-        <p class="tekstpagina"> Maar dat ‘meer, harder, sneller’ is nu meer ‘prima zo, vlot, af en toe doorhalen’ en
-          niet meer dan dat. Grappig hoe twee auto’s die in de basis zo gelijk lijken, zo verschillend voelen. Niet dat
-          het mis gaat als ik wel even de grens op zoek. De Porsche 718 Boxster GTS laat zich graag stevig aanpakken. Is
-          op de grens echt heel goed, geeft veel vertrouwen. Geen onderstuur te vinden. De sleutel zit hem denk ik in
-          het geluid: de auto lijkt stiller.</p>
+        <p class="tekstpagina">
+De Porsche Cayenne kennen we sinds 2002. Het is een fullsize SUV die destijds het eerste model van Porsche was naast de sportwagenlijn. De voornaamste markt van de Porsche Cayenne is in Amerika. De eerste Porsche Cayenne heeft als typecode 9PA en deelt zijn basistechniek met de Volkswagen Touareg en de Audi Q7. Voor de Porsche Cayenne zette Porsche een fabriek neer in Leipzig maar de motor, de transmissies en alle onderdelen in de carrosserie werden gebouwd.</p>
       </div>
       <div class="fotorechts1">
         <img src="https://cdn.wallpapersafari.com/45/31/r7BQxJ.jpg"
@@ -43,35 +40,16 @@
       </div>
       <div class="allinea2">
         <h2 class="titelelkepagina"> 3,3 tot de 100 </h2>
-        <p class="tekstpagina"> De Porsche 718 Cayman komt op de markt in 2016 met typecode 982. In feite is het een
-          gefacelifte variant van de Porsche Cayman 981 maar omdat de zescilindermotoren van de Porsche Cayman en de
-          Porsche Cayman S worden vervangen door viercilinder turbomotoren wordt '718' aan de typenaam toegevoegd. Dat
-          is tevens de naam van de Porsche die in 1959 en 1960 de Targa Florio won. Door een kleine motor in een zeer
-          lichte auto te plaatsen kon die Porsche 718 de concurrentie met zwaardere motoren aftroeven.</p>
+        <p class="tekstpagina"> Porsche heeft ook concurentie wie de snelste SUV op de markt kan brengen. Zoals: Lamborghini, alpha Romeo, Bentley. lamborghini was altijd de snelste maar sinds kort is dat verleden tijd. porsche heeft de Cayenne turbo GT een tijd geleden op de markt gebracht. Deze turbo GT heeft maarliefst 640PK aangedreven door een 4.0liter V8 waardoor deze bolide 0 tot 100 in 3,3 seconde doet. dat is sneller dan de meeste sport auto's op de gehele markt. </p>
       </div>
       <div class="allinea3">
-        <P class="tekstpagina"> De Porsche 718 Boxster is eigenlijk een faceliftversie van de Posche Boxster 981, de
-          derde generatie van dit type. De 718 Boxster heeft echter vier- in plaats van zescilindermotoren en draagt de
-          modelcode 982. De aanduiding 718 is geleend van de raceauto die in 1959 en 1960 de Targa Florio won. De
-          zescilindermotoren uit de Boxster en de Boxster S zijn vervangen door viercilinders met een turbo. De motor
-          van de standaard Porsche Boxster heeft een inhoud van 2,0-liter en een vermogen van 300 pk. De Boxster S heeft
-          een viercilinder turbo van 2,5 liter die 350 pk levert. Porsche claimt dat de viercilinders 0,9 tot 1,0 liter
-          minder brandstof nodig hebben per honderd kilometer. Ten opzichte van de Porsche Boxster 981 is de nieuwe
-          LED-koplampen de grootste uiterlijke wijziging.
-          .</P>
+        <P class="tekstpagina">De Cayenne Turbo GT is niet alleen sterker, maar het weggedrag moet ook sportiever aanvoelen. De SUV staat op speciaal voor het model ontwikkelde Pirelli P Zero Corsa-banden en Porsche wijzigde de software voor het Porsche Dynamic Chassis Control (PDCC) en Porsche Traction Management (PTM). Ook zegt Porsche dat de schakeltijden voor de achttraps Tiptronic S-automaat korter zijn geworden. Hoe die aanpassingen zich concreet in de praktijk vertalen, zal moeten blijken uit een rijtest. In ieder geval geeft het Nürburgring-record van 7 minuten en 38 seconden een goede indicatie van de snelheid waarmee de SUV door bochten gejaagd kan worden.
+</P>
       </div>
       <div class="allinea4">
-        <h2 class="titelelkepagina"> Het bekende interieur </h2>
-        <p class="tekstpagina"> De Porsche 718 Cayman komt op de markt in 2016 met typecode 982. In feite is het een
-          gefacelifte variant van de Porsche Cayman 981 maar omdat de zescilindermotoren van de Porsche Cayman en de
-          Porsche Cayman S worden vervangen door viercilinder turbomotoren wordt '718' aan de typenaam toegevoegd. Dat
-          is tevens de naam van de Porsche die in 1959 en 1960 de Targa Florio won. Door een kleine motor in een zeer
-          lichte auto te plaatsen kon die Porsche 718 de concurrentie met zwaardere motoren aftroeven.</p>
-        <p class="tekstpagina">De Porsche 718 Cayman komt op de markt in 2016 met typecode 982. In feite is het een
-          gefacelifte variant van de Porsche Cayman 981 maar omdat de zescilindermotoren van de Porsche Cayman en de
-          <b>Porsche Cayman S</b> worden vervangen door viercilinder turbomotoren wordt '718' aan de typenaam
-          toegevoegd. Dat is tevens de naam van de Porsche die in 1959 en 1960 de Targa Florio won. Door een kleine
-          motor in een zeer lichte auto te plaatsen kon die Porsche 718 de concurrentie met zwaardere motoren aftroeven
+        <h2 class="titelelkepagina"> de komst van de Porsche Cayenne-Coupé </h2>
+        <p class="tekstpagina"> De Porsche Cayenne is voorzien van een 3,0-liter V6 turbomotor met een vermogen van 340 pk. De Porsche Cayenne S heeft een 2,9-liter V6 met twee turbo's en een vermogen van 440 pk. De Cayenne GTS heeft een V8 met twee turbo's en een vermogen van 460 pk. Verder is er de Porsche Cayenne E-hybrid plug in-hybride met een systeemvermogen van 462 pk. De Cayenne Turbo heeft een dubbelgeblazen V8 met 550 pk en de Porsche Cayenne Turbo S E-hybrid is een plug in-hybride met een systeemvermogen van 680 pk. De Porsche Cayenne Diesel vervalt.</p>
+        <p class="tekstpagina">
         </p>
       </div>
       <div class="fotolinks1">
@@ -80,18 +58,10 @@
           alt="fotorechts1" width="800" height="510">
       </div>
       <div class="allinea5">
-        <p class="tekstpagina">De Porsche 718 Cayman komt op de markt in 2016 met typecode 982. In feite is het een
-          gefacelifte variant van de Porsche Cayman 981 maar omdat de zescilindermotoren van de Porsche Cayman en de
-          Porsche Cayman S worden vervangen door viercilinder turbomotoren wordt '718' aan de typenaam toegevoegd. Dat
-          is tevens de naam van de Porsche die in 1959 en 1960 de Targa Florio won. Door een kleine motor in een zeer
-          lichte auto te plaatsen kon die Porsche 718 de concurrentie met zwaardere motoren aftroeven. </p>
+        <p class="tekstpagina">Vanaf 2019 is er een tweede carrosserievariant: de Porsche Cayenne-Coupé heeft een sterk aflopende daklijn, maar evengoed wel gewoon achterportieren. De kofferruimte in de Cayenne-Coupé is door zijn andere vorm 150 liter kleiner. De verkoop start in mei 2019 met het zelfde motorenaanbod als de reguliere Porsche Cayenne. In augustus van dat jaar worden ook beide hybridevarianten in de Posche Cayenne-Coupé leverbaar. </p>
       </div>
       <div class="allinea6">
-        <p class="tekstpagina"> De Porsche 718 Cayman komt op de markt in 2016 met typecode 982. In feite is het een
-          gefacelifte variant van de Porsche Cayman 981 maar omdat de zescilindermotoren van de Porsche Cayman en de
-          Porsche Cayman S worden vervangen door viercilinder turbomotoren wordt '718' aan de typenaam toegevoegd. Dat
-          is tevens de naam van de Porsche die in 1959 en 1960 de Targa Florio won. Door een kleine motor in een zeer
-          lichte auto te plaatsen kon die Porsche 718 de concurrentie met zwaardere motoren aftroeven. </p>
+        <p class="tekstpagina">  </p>
       </div>
     </main>
 
